--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title> (301122A_614) </title>
 </head>
 <body>
   <h1>
-    lizeth
+      DISEÑO DE SITIOS WEB - (301122A_614) <br>
+          Hello  world <br>
+              Lizeth Vega
   </h1>
 </body>
 </html>
