cambio codigo de grupo

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title> (301122A_614) </title>
+  <title> 301122_78 </title>
 </head>
 <body>
   <h1>
-      DISEÑO DE SITIOS WEB - (301122A_614) <br>
+      DISEÑO DE SITIOS WEB - (301122A_614) Grupo 301122_78 <br>
           Hello  world <br>
               Lizeth Vega
   </h1>
