--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       DISEÑO DE SITIOS WEB - (301122A_614) Grupo 301122_78 <br>
           Hello  world <br>
               Lizeth Vega
-	Modificación
+	Modificación hecha por Fernando
   </h1>
 </body>
 </html>
